<resources>
    <string name="app_name">Pointme</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">599278173835264</string>
    <string name="fb_login_protocol_scheme">fb599278173835264</string>
    <string name="title_activity_categories">CategoriesActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_list_of_service_providers">ListOfServiceProviders</string>
    <string name="title_activity_test">testActivity</string>
    <string name="categories">CATEGORIES</string>
    <string name="favorites">FAVORITES</string>
    <string name="search">search</string>
    <string name="booking">BOOKING</string>
    <string name="more">more</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="subtitle">BACK</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="error_message">Try again later</string>
    <string name="crossfit">Crossfit</string>
    <string name="Yoga">Yoga</string>
    <string name="Hairdressers">Hairdressers</string>
    <string name="Makeup">Makeup</string>
    <string name="Swimming">Swimming</string>
    <string name="Pointme">Pointme</string>
    <string name="login">Login</string>
    <string name="facebook">Facebook</string>
    <string name="no_account">No account yet? Create one</string>
    <string name="title_activity_google_maps">Map</string>
    <string name="gps_not_enabled">GPS is not Enabled!</string>
    <string name="turn_on_gps">Do you want to turn on GPS?</string>
</resources>

