<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.example.pointme.activities.LoginActivity">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:src="@drawable/logo" />

        <ImageView
            android:id="@+id/iv"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_below="@+id/logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="35dp"
            android:src="@drawable/login" />

        <!--  Email Label -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="90dp">

            <EditText
                android:id="@+id/emailText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Email"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--  Password Label -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/passwordInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/loginButton"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv"
            android:layout_marginStart="35dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:onClick="login"
            android:text="@string/login" />

        <TextView
            android:id="@+id/signupTv"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/loginButton"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:text="@string/no_account"
            android:textSize="16sp"
            android:onClick="gotoSignup"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/fbButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/signupTv"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:text="@string/facebook"
            app:backgroundTint="@color/color_facebook"
            app:icon="@drawable/facebook_logo_icon"
            app:iconSize="32dp"
            android:onClick="fbLogin"/>
    </RelativeLayout>
</layout>